과제: 기말 과제 참고용
C 프로그래밍 입문 코드 백업

--- a/AE0049_C 프로그래밍 입문/과제.md
+++ b/AE0049_C 프로그래밍 입문/과제.md
@@ -335,3 +335,60 @@ int  SaveHTML() {
 }
 
 ```
+
+
+```mermaid
+graph TD
+    title[2024E7109 김인찬]
+    title --> A[시작]
+    A --> B[변수 row를 0으로 초기화]
+    B --> C{row < 3 인가?}
+    C -->|true| D[변수 j를 1로 초기화]
+    C -->|false| I[종료]
+    D --> E{j <= 9 인가?}
+    E -->|true| F[단을 계산하여 출력]
+    F --> G[j를 증가]
+    G --> D
+    E -->|false| H[row를 증가]
+    H --> C
+
+```
+```c
+#include <stdio.h>
+
+int main() {
+    for (int row = 0; row < 3; row++) {
+        for (int j = 1; j <= 9; j++) {
+            for (int i = 3 * (row + 1); i > 3 * row; i--) {
+                printf("%d * %d = %2d\t", i, j, i * j);
+            }
+            printf("\n");
+        }
+        printf("\n");
+    }
+    return 0;
+}
+
+```
+
+```mermaid
+graph TD
+    title[2024E7109 김인찬]
+    title --> A[시작]
+    A --> B[소수를 입력 받기]
+    B --> C[변환할 진법 선택]
+    C --> D{진법이 2, 8, 16 인가?}
+    D -->|아니오| E[유효하지 않은 진법 메시지 출력 후 종료]
+    D -->|예| F[정수 부분과 소수 부분 분리]
+    F --> G[정수 부분 변환 시작]
+    G --> H{정수 부분이 0인가?}
+    H -->|예| I[정수 부분 0 출력]
+    H -->|아니오| J[정수 부분을 진법으로 변환하여 출력]
+    J --> K[소수 부분 변환 시작]
+    K --> L[소수 부분을 진법으로 변환하여 출력]
+    L --> M[변환된 값 출력]
+    M --> N[소수점 이하 5자리]
+    N --> O[종료]
+
+```
+믄자열 현출일 
