강의: 오탈자 수정
사진을 mermaid 그래프로 바꿀 수 있는 것은 바꿈

--- a/NA1011_프로그래밍 입문/7. 수식과 연산자/대입(배정, 할당) 연산자.md
+++ b/NA1011_프로그래밍 입문/7. 수식과 연산자/대입(배정, 할당) 연산자.md
@@ -1,3 +1,14 @@
 왼쪽에 있는 변수에 오른쪽의 수식의 값을 계산하여 대입
 
-![](https://i.imgur.com/BEjkQZO.png)
+| 복합 대입 연산자 | 의미         |
+| --------- | ---------- |
+| x += y    | x = x + y  |
+| x -= y    | x = x - y  |
+| x *= y    | x = x * y  |
+| x /= y    | x = x / y  |
+| x %= y    | x = x % y  |
+| x &= y    | x = x & y  |
+| x \|= y   | x = x \| y |
+| x ^= y    | x = x ^ y  |
+| x >>= y   | x = x >> y |
+| x <<= y   | x = x << y |
