--- a/NA1011_프로그래밍 입문/7. 수식과 연산자/우선 순위와 결합 법칙.md
+++ b/NA1011_프로그래밍 입문/7. 수식과 연산자/우선 순위와 결합 법칙.md
@@ -1,1 +1,18 @@
-![](https://i.imgur.com/Tztmhix.png)
+
+| 우선 순위 | 연산자                                                   | 결합 규칙     |
+| ----- | :---------------------------------------------------- | :-------- |
+| 1     | () [] -> . ++(후위) --(후위)                              | ->(좌에서 우) |
+| 2     | sizeod &(주소) ++(전위) --(전위) ~ ! *(역참조) +(부호) -(부호) 형변환 | <-(우에서 좌) |
+| 3     | *(곱셈) / %                                             | ->(좌에서 우) |
+| 4     | +(덧셈) -(뺄셈)                                           | ->(좌에서 우) |
+| 5     | << >>                                                 | ->(좌에서 우) |
+| 6     | < <= >= >                                             | ->(좌에서 우) |
+| 7     | == !=                                                 | ->(좌에서 우) |
+| 8     | &(비트연산)                                               | ->(좌에서 우) |
+| 9     | ^                                                     | ->(좌에서 우) |
+| 10    | \|                                                    | ->(좌에서 우) |
+| 11    | &&                                                    | ->(좌에서 우) |
+| 12    | \|\|                                                  | ->(좌에서 우) |
+| 13    | ?(삼항)                                                 | <-(우에서 좌) |
+| 14    | = += *= /= %= &= ^= != <<= >>=                        | <-(우에서 좌) |
+| 15    | ,(콤마)                                                 | ->(좌에서 우) |
