--- a/NA1011_프로그래밍 입문/7. 수식과 연산자/논리 연산자.md
+++ b/NA1011_프로그래밍 입문/7. 수식과 연산자/논리 연산자.md
@@ -3,4 +3,8 @@
 피연산자의 참, 거짓을 가릴 때에는 0이 아니면 참이고 0이 면 거짓으로 판단 
 음수는 거짓으로 판단
 
-![](https://i.imgur.com/ndl7adE.png)
+| 연산자      | 의미                                   |
+| -------- | ------------------------------------ |
+| x && y   | AND 연산, x와 y가 모두 참이면 참, 그렇지 않으면 거짓   |
+| x \|\| y | OR 연산, x나 y중에서 하나만 참이면 참, 모두 거짓이면 거짓 |
+| !x       | NOT 연산, x가 참이면 거짓, x가 거짓이면 참         |
