--- a/NA1011_프로그래밍 입문/7. 수식과 연산자/산술 연산자.md
+++ b/NA1011_프로그래밍 입문/7. 수식과 연산자/산술 연산자.md
@@ -2,3 +2,8 @@
 덧셈, 뺄셈, 곱셈, 나눗셈 등의 사칙 연산을 수행하는 연산자
 
 ![](https://i.imgur.com/YEehWii.png)
+
+| 연산자 | 기호  | 의미                      |
+| --- | --- | ----------------- |
+| 덧셈  | x+y                           |
+| 뺄셈                      서   를   기   |         곱    |    y     x   y를                   나    |   x를 y로 나눌 때의 나머지 값 나눌 때의  나눌 때의  나눌 때의   나눌때의   나눌때의   나눌때의  |
