강의: 컴퓨터 개론 오탈자 수정

--- a/NF1003_컴퓨터 개론/12. 컴퓨터와 소통하는 프로그래밍 언어/연습 문제.md
+++ b/NF1003_컴퓨터 개론/12. 컴퓨터와 소통하는 프로그래밍 언어/연습 문제.md
@@ -1,31 +1,49 @@
 # 단답식 연습문제
 
-1. 고급 언어에는 FORTRAN, BASIC, C, C++ 등이 있으며, 저급 언어에는 기계어와 (어셈블리 언어)가 있다
+1. 고급 언어에는 FORTRAN, BASIC, C, C++ 등이 있으며, 저급 언어에는 기계어와 (   )가 있다
 
-2. 주요 인공지능 언어로는 (Lisp)와/과 Prolog가 있다
 
-3. (C) 언어는 UNIX 운영체제의 작성을 위한 시스템 프로그래밍 언어로 설계되었고, 벨연구소에서는 이 언어를 사용하여 UNIX 운영체제를 작성하였다
+		어셈블리 언어
+1. 주요 인공지능 언어로는 (   )와/과 Prolog가 있다
 
-4. 제4세대 언어란 4세대 컴퓨터가 사용된 시기에 개발된 프로그래밍 언어를 말하는데, 통상 영어 약자로 (4GL)이라 한다
+		Lisp
+1. (   ) 언어는 UNIX 운영체제의 작성을 위한 시스템 프로그래밍 언어로 설계되었고, 벨연구소에서는 이 언어를 사용하여 UNIX 운영체제를 작성하였다
 
-5. (Delphi)는 Object Pascal을 사용하며 VCL이라는 편리한 컨트롤을 제공한다.
 
-6. (C#)은/는 닷넷 환경의 응용 프로그램을 개발하기 위한 프로그래밍 언어로서, 2000년도에 마이크로소프트사의 엔지니어인 앤더스 헤일스버그와 스콧 윌타무스를 중심으로 개발되었는데, C, C++, Java, Visual Basic 등의 언어로부터 많은 영향을 받았다.
+		C
+1. 제4세대 언어란 4세대 컴퓨터가 사용된 시기에 개발된 프로그래밍 언어를 말하는데, 통상 영어 약자로 (   )이라 한다
 
-7. 객체지향에서 (다형성)이란 클래스 외부에서는 하나의 작업으로 생각하게 하고 내부에서는 각기 다른 방법으로 구현되는 것을 말한다.
 
-8. 클래스의 특성 중 (캡슐화)는 사용자는 내부를 알 필요가 없이, 드러난 인터페이스만으로 그 객체를 사용할 수 있으며, 외부의 자료 접근이나 변경 등의 위험을 줄일 수 있다.
+		4GL
+1. (   )는 Object Pascal을 사용하며 VCL이라는 편리한 컨트롤을 제공한다.
 
-9. 객체지향 프로그래밍이란 (객체)를 중심으로 하여 프로그램을 작성하는 방법을 말한다.
+		Delphi
+1. (   )은/는 닷넷 환경의 응용 프로그램을 개발하기 위한 프로그래밍 언어로서, 2000년도에 마이크로소프트사의 엔지니어인 앤더스 헤일스버그와 스콧 윌타무스를 중심으로 개발되었는데, C, C++, Java, Visual Basic 등의 언어로부터 많은 영향을 받았다.
 
-10. (Java)는 미국의 Sun사에서 가전제품들을 제어하기 위해 개발한 언어이다.
 
-11. Java는 객체지향 언어이므로 프로그램상의 모든 것을 객체로 표현하며, 이것은 (클래스)라는 것으로 구현된다.
+		C#
+1. 객체지향에서 (   )이란 클래스 외부에서는 하나의 작업으로 생각하게 하고 내부에서는 각기 다른 방법으로 구현되는 것을 말한다.
 
-12. (MFC)는 Visual C++로 프로그래밍을 쉽게 하기 위하여 대부분의 기능을 C++ 클래스로 만들어 놓은 강력한 클래스 라이브러리인데, 방대한 양과 편리한 기능을 제공한다.
+		다형성
+1. 클래스의 특성 중 (  )는 사용자는 내부를 알 필요가 없이, 드러난 인터페이스만으로 그 객체를 사용할 수 있으며, 외부의 자료 접근이나 변경 등의 위험을 줄일 수 있다.
 
-13. UNIX 운영체제의 작성을 위한 시스템 프로그래밍 언어로 설계된 언어는 (C)이다.
+		캡슐화
+1. 객체지향 프로그래밍이란 (  )를 중심으로 하여 프로그램을 작성하는 방법을 말한다.
 
+
+		객체
+1. (   )는 미국의 Sun사에서 가전제품들을 제어하기 위해 개발한 언어이다.
+
+		Java
+1. Java는 객체지향 언어이므로 프로그램상의 모든 것을 객체로 표현하며, 이것은 (   )라는 것으로 구현된다.
+
+		클래스
+1. (   )는 Visual C++로 프로그래밍을 쉽게 하기 위하여 대부분의 기능을 C++ 클래스로 만들어 놓은 강력한 클래스 라이브러리인데, 방대한 양과 편리한 기능을 제공한다.
+
+		MFC
+1. UNIX 운영체제의 작성을 위한 시스템 프로그래밍 언어로 설계된 언어는 (   )이다.
+
+		C
 # 주관식 연습습 문제
 
 1. 컴파일러 방식과 인터프리터 방식의 차이점을 번역 방법, 장점, 단점, 결과물, 적용언어 등의 관점에서 비교하시오.
