--- a/NF1003_컴퓨터 개론/13. 데이터베이스와 컴퓨터 보안/연습 문제.md
+++ b/NF1003_컴퓨터 개론/13. 데이터베이스와 컴퓨터 보안/연습 문제.md
@@ -68,7 +68,7 @@
 
 		유출
 
-13장 주관식 연습문제
+# 주관식 연습문제
 
 1. 파일의 구성 요소를 설명하시오.
 
@@ -96,74 +96,74 @@
 
 		5.데이터간 연결은 기본 키의 중복으로 생성됨.
 
-4.다음은 관계형 데이터 모델의 용어들이다.간략하게 설명하시오.
+4. 다음은 관계형 데이터 모델의 용어들이다.간략하게 설명하시오.
 
-	(1) 릴레이션
+		(1) 릴레이션
 	
-		1.투플 내의 각 속성값으로 원자 값(값이 더 이상 나누어 질 수 없는 단일값)을 가짐.
+			1.투플 내의 각 속성값으로 원자 값(값이 더 이상 나누어 질 수 없는 단일값)을 가짐.
 
-		2.각 속성은 유일한 이름을 가지며 속성의 순서는 큰 의미가 없음.
+			2.각 속성은 유일한 이름을 가지며 속성의 순서는 큰 의미가 없음.
 
-		3.테이블에서 모든 투플은 서로 다른 값을 가지며, 투플의 순서는 없고, 릴레이션은 투플들의 집합으로 정의됨.
+			3.테이블에서 모든 투플은 서로 다른 값을 가지며, 투플의 순서는 없고, 릴레이션은 투플들의 집합으로 정의됨.
 
-	(2) 투플
+		(2) 투플
 
-		테이블의 행(레코드 단위)을 말함.
+			테이블의 행(레코드 단위)을 말함.
 
-	(3) 속성
+		(3) 속성
 
-		열에 해당, 도메인은 속성들의 값의 범위를 의미함.
+			열에 해당, 도메인은 속성들의 값의 범위를 의미함.
 
-5.암호화 기법은 크게 2가지로 구분할 수 있다. 두 가지 방법에서 가장 두드러진 차이점은 무엇인가?
+5. 암호화 기법은 크게 2가지로 구분할 수 있다. 두 가지 방법에서 가장 두드러진 차이점은 무엇인가?
 
-	환자식:원문의 글자 순서를 그대로 두고 문자를 다른 문자로 바꾸는 방법임.
-
-	전치식:문자는 그대로 두고 문자의 순서만 바꾸는 방법임.
-
-	문자를 그대로 두는가 문자를 다른 문자로 바꾸는가가 가장 큰 차이점임.
-
-6.우리가 흔히 보는 인터넷 쇼핑몰 사이트들이 어떤 암호 방식을 사용하는지 알아보고, 그 방식은 어떤 원리로 이루어지는지를 설명하시오.
-
-	비밀키암호방식(대칭형)
-
-		1.A사용자는 B사용자에게 암호화에 쓰일 동일한 비밀키를 공유한다.
-
-		2.A사용자는 전송하려는 평문에 대해 비밀키를 사용하여 암호화한다.
-
-		3.암호화된 문서를 받은 B사용자도 A사용자와 공유하고 있는 비밀키로 복호를 수행한다.
-
-	공개키암호방식(비대칭형)
-
-		1.A사용자와 B사용자 각자 개인키와 공개키 한 쌍을 생성한다.
-
-		2.공개키는 모든 사람들에게 누구나 쓸 수 있도록 공개한다.(PKI)
-
-		3.A사용자가 평문을 B사용자에게 보내려고 할 때 A사용자는 공개되어있는 B사용자의 공개키(B)로 전달하려는 평문을 암호화 후 B사용자에게 보낸다.
-		
-		4.B사용자는 A사용자에게 전달한 공개키(B)로 암호화된 문서를 개인키(B)로 복호하여 암호화되지 않은 평문의 내용을 확인한다.
-
-7.자신의 컴퓨터가 바이러스에 감염되어 파괴되었다고 가정하고 복구할 수 있는 방법들을 제시하시오.
-
-	깨끗한 부팅 디스크로 부팅한 후 최신 버전의 백신 프로그램으로 바이러스를 치료해야 함.
-
-	바이러스가 계속 생긴다면 일단 컴퓨터의 모든 자료 파일만 백업을 받고 포멧하는 것도 좋은 방법임.
-
-8.컴퓨터 바이러스는 여러 가지 유형으로 나뉜다. 그 종류로는 파일 바이러스, 부트 바이러스, 매크로 바이러스, e-메일 바이러스 등이 있다. 이들 유형의 주요 특징들은 무엇인가?
-
-	1.파일 바이러스:실행 파일이나 그에 준하는 오버레이 파일 등에 감염되는 것으로 알려진 바이러스 중 가장 많은 수를 차지함.
-
-	2.부트 바이러스:MS-DOS에서 디스크의 제일 첫 부분인 부트라는 부분에 바이러스 코드를 넣어 놓는 방식임.
-
-	3.매크로 바이러스:매크로 기능을 제공하는 엑셀이나 워드 등 Visual Basic 매크로를 사용하여 컴퓨터에 피해를 입힘.주로 e-메일을 통해 전파됨.
-
-	4.e-메일 바이러스:인터넷 상에서 사용할 수 있는 e-메일 검색 프로그램들이 기본적으로 VBScript나 JavaScript 등을 자동적으로 실행한다는 점에서 착안하여 만들어짐.
-
-9.디도스의 공격 방식을 설명하시오.
-
-	'분산 서비스 거부'의 약자인데, 여러 대의 컴퓨터에다 서비스 공격 도구들을 분산 배치해놓고 공격 목표 사이트의 컴퓨터가 처리할 수 있는 용량을 초과하는 정보를 한꺼번에 보내 과부하로 서버를 다운시키는 공격방식을 말함.
-
-	공격은 통상 악성코드나 e-메일 등을 통하여 일반 사용자의 PC를 감염시켜 이른바 '좀비 PC'로 미리 만들어 놓은 후, 서버의 명령 제어를 통하여 특정한 시간대만 집중적으로 수행됨.
+		환자식:원문의 글자 순서를 그대로 두고 문자를 다른 문자로 바꾸는 방법임.
 	
-10.스미싱을 정의하고 어떤 방식으로 개인정보를 뺴 가는지 설명하시오.
+		전치식:문자는 그대로 두고 문자의 순서만 바꾸는 방법임.
+	
+		문자를 그대로 두는가 문자를 다른 문자로 바꾸는가가 가장 큰 차이점임.
 
-	문자메시지를 이용한 새로운 휴대폰 해킹 수법으로서,SMS와 피싱의 합성어. 해커가 보낸 메시지를 받는 휴대폰 사용자가 해당 웹사이트 주소를 클릭하는 순간 악성코드가 깔리게 되고, 해커는 이를 통해 피해자의 스마트폰을 원격 조종하며 개인정보를 빼내감.
+6. 우리가 흔히 보는 인터넷 쇼핑몰 사이트들이 어떤 암호 방식을 사용하는지 알아보고, 그 방식은 어떤 원리로 이루어지는지를 설명하시오.
+	
+		비밀키암호방식(대칭형)
+	
+			1.A사용자는 B사용자에게 암호화에 쓰일 동일한 비밀키를 공유한다.
+	
+			2.A사용자는 전송하려는 평문에 대해 비밀키를 사용하여 암호화한다.
+	
+			3.암호화된 문서를 받은 B사용자도 A사용자와 공유하고 있는 비밀키로 복호를 수행한다.
+	
+		공개키암호방식(비대칭형)
+	
+			1.A사용자와 B사용자 각자 개인키와 공개키 한 쌍을 생성한다.
+	
+			2.공개키는 모든 사람들에게 누구나 쓸 수 있도록 공개한다.(PKI)
+	
+			3.A사용자가 평문을 B사용자에게 보내려고 할 때 A사용자는 공개되어있는 B사용자의 공개키(B)로 전달하려는 평문을 암호화 후 B사용자에게 보낸다.
+			
+			4.B사용자는 A사용자에게 전달한 공개키(B)로 암호화된 문서를 개인키(B)로 복호하여 암호화되지 않은 평문의 내용을 확인한다.
+
+7. 자신의 컴퓨터가 바이러스에 감염되어 파괴되었다고 가정하고 복구할 수 있는 방법들을 제시하시오.
+
+		깨끗한 부팅 디스크로 부팅한 후 최신 버전의 백신 프로그램으로 바이러스를 치료해야 함.
+	
+		바이러스가 계속 생긴다면 일단 컴퓨터의 모든 자료 파일만 백업을 받고 포멧하는 것도 좋은 방법임.
+
+8. 컴퓨터 바이러스는 여러 가지 유형으로 나뉜다. 그 종류로는 파일 바이러스, 부트 바이러스, 매크로 바이러스, e-메일 바이러스 등이 있다. 이들 유형의 주요 특징들은 무엇인가?
+
+		1. 파일 바이러스:실행 파일이나 그에 준하는 오버레이 파일 등에 감염되는 것으로 알려진 바이러스 중 가장 많은 수를 차지함.
+	
+		2. 부트 바이러스:MS-DOS에서 디스크의 제일 첫 부분인 부트라는 부분에 바이러스 코드를 넣어 놓는 방식임.
+	
+		3. 매크로 바이러스:매크로 기능을 제공하는 엑셀이나 워드 등 Visual Basic 매크로를 사용하여 컴퓨터에 피해를 입힘.주로 e-메일을 통해 전파됨.
+	
+		4. e-메일 바이러스:인터넷 상에서 사용할 수 있는 e-메일 검색 프로그램들이 기본적으로 VBScript나 JavaScript 등을 자동적으로 실행한다는 점에서 착안하여 만들어짐.
+
+9. 디도스의 공격 방식을 설명하시오.
+
+		'분산 서비스 거부'의 약자인데, 여러 대의 컴퓨터에다 서비스 공격 도구들을 분산 배치해놓고 공격 목표 사이트의 컴퓨터가 처리할 수 있는 용량을 초과하는 정보를 한꺼번에 보내 과부하로 서버를 다운시키는 공격방식을 말함.
+
+		공격은 통상 악성코드나 e-메일 등을 통하여 일반 사용자의 PC를 감염시켜 이른바 '좀비 PC'로 미리 만들어 놓은 후, 서버의 명령 제어를 통하여 특정한 시간대만 집중적으로 수행됨.
+	
+10. 스미싱을 정의하고 어떤 방식으로 개인정보를 뺴 가는지 설명하시오.
+
+		문자메시지를 이용한 새로운 휴대폰 해킹 수법으로서,SMS와 피싱의 합성어. 해커가 보낸 메시지를 받는 휴대폰 사용자가 해당 웹사이트 주소를 클릭하는 순간 악성코드가 깔리게 되고, 해커는 이를 통해 피해자의 스마트폰을 원격 조종하며 개인정보를 빼내감.
