--- a/NF1003_컴퓨터 개론/7. 최근의 컴퓨터 응용 기술/연습 문제.md
+++ b/NF1003_컴퓨터 개론/7. 최근의 컴퓨터 응용 기술/연습 문제.md
@@ -1,28 +1,42 @@
 # 단답식 연습 문제
-1. (유비쿼터스)컴퓨팅은 전자공간과 물리공간을 연결해주는 차세대 기반 컴퓨팅 기술로서 이동성, 인간성, 기능성 등에 따라 여러 가지 컴퓨팅 기술들로 구분될 수 있다.
+1. (   )컴퓨팅은 전자공간과 물리공간을 연결해주는 차세대 기반 컴퓨팅 기술로서 이동성, 인간성, 기능성 등에 따라 여러 가지 컴퓨팅 기술들로 구분될 수 있다.
 
-2. (임베디드)컴퓨팅은 다리, 빌딩 등과 같은 사물에다 마이크로칩 등을 심어 사물을 지능화하는 컴퓨팅을 말한다.
+		유비쿼터스
+1. (   )컴퓨팅은 다리, 빌딩 등과 같은 사물에다 마이크로칩 등을 심어 사물을 지능화하는 컴퓨팅을 말한다.
 
-3. (엑조틱)컴퓨팅은 스스로 생각하여 현실세계와 가상세계를 연계해주는 컴퓨팅을 실현하는 기술이다.
+		임베디드
+1. (   )컴퓨팅은 스스로 생각하여 현실세계와 가상세계를 연계해주는 컴퓨팅을 실현하는 기술이다.
 
-4. 컴퓨터가 센서 등을 통해 사용자의 상황을 인식하여 사용자가 필요로 하는 정보를 제공해 주는 컴퓨팅 기술은 (감지)컴퓨팅이다.
+		엑조틱
+1. 컴퓨터가 센서 등을 통해 사용자의 상황을 인식하여 사용자가 필요로 하는 정보를 제공해 주는 컴퓨팅 기술은 (   )컴퓨팅이다.
 
-5. (퍼베이시브)컴퓨팅은 1998년 이후 IBM을 중심으로 착안되었으며, 유비쿼터스 컴퓨팅과 비슷한 개념이다. 어디든지 어떤 사물이든지 도처에 컴퓨터가 편재되도록 하여 현재의 전기나 가전제품처럼 일상화 된다는 비전을 담고 있다.
+		감지
 
-6. (홈 네트워킹)이란 가정 내의 정보를 처리, 관리, 전달 및 저장함으로써 집안의 여러 계산, 관리, 감시 및 통신 장치들을 연결 및 통합할 수 있도록 해주는 구성 요소들의 모임이다.
+2. (   )컴퓨팅은 1998년 이후 IBM을 중심으로 착안되었으며, 유비쿼터스 컴퓨팅과 비슷한 개념이다. 어디든지 어떤 사물이든지 도처에 컴퓨터가 편재되도록 하여 현재의 전기나 가전제품처럼 일상화 된다는 비전을 담고 있다.
 
-7. 가전제품을 비롯해 에너지 소비 장치, 의료시스템 접속, 보안기기 등 다양한 분야에서 통신망으로 연결하여 모니터링하고 제어할 수 있는 기술을 (스마트홈)기술이라 한다.
+		퍼베이시브
+1. (   )이란 가정 내의 정보를 처리, 관리, 전달 및 저장함으로써 집안의 여러 계산, 관리, 감시 및 통신 장치들을 연결 및 통합할 수 있도록 해주는 구성 요소들의 모임이다.
 
-8. (혼합 현실)은 완전 가상현실이 아닌 현실과 가상이 자연스럽게 연결된 스마트 환경을 사용자에게 제공하여 풍부한 체험을 제공하는데, 일기 예보를 위한 방송국의 가상 스튜디오를 예로 들 수 있다
+		홈 네트워킹
+1. 가전제품을 비롯해 에너지 소비 장치, 의료시스템 접속, 보안기기 등 다양한 분야에서 통신망으로 연결하여 모니터링하고 제어할 수 있는 기술을 (   )기술이라 한다.
 
-9. 손목시계, U-헬스, 안경 형태 등의 기기들은 대표적인 (웨어러블)디바이스이다.
+		스마트홈
+1. (   )은 완전 가상현실이 아닌 현실과 가상이 자연스럽게 연결된 스마트 환경을 사용자에게 제공하여 풍부한 체험을 제공하는데, 일기 예보를 위한 방송국의 가상 스튜디오를 예로 들 수 있다
 
-10. 나이키에서 개발한 (fuelband)는 건강을 위한 U-헬스 웨어러블 기기에 속한다
+		혼합 현실
 
-11. 사용자가 눈으로 보는 현실 화면이나 실제 영상에다 컴퓨터가 재현하는 문자나 그래픽 같은 가상 정보를 합성하여 함께 체험할 수 있도록 하는 기술을 (증강현실)이라 한다.
+2. 손목시계, U-헬스, 안경 형태 등의 기기들은 대표적인 (   )디바이스이다.
 
-12. (지능형 로봇)은 무선 네트워크 등 별도의 조작 없이도 스스로 판단하고 행동하며, 외부 환경에 적응할 수 있는 로봇이다.
+		웨어러블
+1. 나이키에서 개발한 (   )는 건강을 위한 U-헬스 웨어러블 기기에 속한다
 
+		fuelband 
+1. 사용자가 눈으로 보는 현실 화면이나 실제 영상에다 컴퓨터가 재현하는 문자나 그래픽 같은 가상 정보를 합성하여 함께 체험할 수 있도록 하는 기술을 (   )이라 한다.
+
+		증강현실
+1. (   )은 무선 네트워크 등 별도의 조작 없이도 스스로 판단하고 행동하며, 외부 환경에 적응할 수 있는 로봇이다.
+
+		지능형 로봇
 # 주관식 연습 문제
 
 1. 유비쿼터스의 3가지 주요 특징들을 말하시오.
