--- a/NF1003_컴퓨터 개론/11. IT 융합 기술 응용과 모바일 컴퓨팅/연습 문제.md
+++ b/NF1003_컴퓨터 개론/11. IT 융합 기술 응용과 모바일 컴퓨팅/연습 문제.md
@@ -2,100 +2,102 @@
 
 1. ( )은/는 IP 기반의 플랫폼이기 떄문에 단방향의 정보 전달에 그치는 기존의 방송 서비스와는 달리 통신의 양방향 특성을 결합하여 다양한 응용 서비스를 제공한다.
 
-		=IPTV
+		IPTV
 
 2. ( )는 통신과 인포매틱스의 합성어로서 자동차 안의 단말기를 통해서 자동차와 운전자에게 다양한 종류의 정보 서브스를 제공해 주는 서비스이다.
 
-		=텔레매틱스
+		텔레매틱스
 
 3. 무선 주파수를 이용한 비접촉 인식장치로서 태그와 리더기로 구성된 시스템인데, 데이터를 다중으로 인식 처리할 수 있는 것은 ( )이다.
 
-		=RFID
+		RFID
 
 4. ( )란 기존 교통체계의 구성 요소에 첨단기술들을 적용시켜, 보다 안전하고 편리한 통행과 전체 교통체계에 효율성을 높이도록 정보화 사업이다.
 
-		=ITS
+		ITS
 
 5. (  )이란 반도체 및 전자기술을 이용하여 손상된 신경을 회복시킴으로써 잃어버린 기능성을 되살려주는 기술이다.
 
-		=인공신경 시스템
+		인공신경 시스템
 
 6.  ( )란 IT융합 기술을 활용하여 기존의 의료기기 및 서비스 수준을 높이거나 새로운 기술 및 산업을 창출하여 삶의 질을 높일 수 있는 신기술이다.
 
-		=U-헬스
+		U-헬스
 
 7. 대상 물체에 부착된 지능 칩과 다양한 센서들을 통하여 언제 어디서나 원하는 정보를 수집하고 통신할 수 있는 무선 식별 시스템은 무엇인가?  
-		=USN
+
+		USN
 
 8. 사용자 주변의 환경을 기반으로 상황을 판단하고 해당 상황에 적절한 서비스를 제공하기 위하여 접속 가능한 여러 기능이나 서비스를 커뮤니티로 유기적으로 구성하여 자율 협업을 통해 문제를 지능적으로 해결하는 컴퓨팅 환경은 무엇인가?
 
-		=커뮤니티 컴퓨팅
+		커뮤니티 컴퓨팅
 
 9. 목적에 따른 응용 프로그램으로서 스마트폰에서 실행이 가능한 프로그램을 무엇이라고 하는가?
 
-		=어플리케이션
+		어플리케이션
 
 10. 구글이 운영하는 동영상 공유 서비스로서, 전 세계 네티즌들이 동영상을 업로드하고 시청하며 공유할 수 있는 SNS는 무엇인가?
 
-		=유튜브
+		유튜브
 
 11. 블록체인 기술을 이용하여 디지털 자산의 소유주를 증명하는 가상의 토큰으로, 같은 물건이 존재할 수 없는 고유성을 가지며 인간의 주민등록증과 같은 역할을 하는 것은?
 
-		=NFT
+		NFT
 
 12. ( ) 컴퓨팅이란 PC에 개별적으로 저장해 두었던 모든 자료와 소프트웨어를 대용량 컴퓨터에 옮겨 놓은 뒤, 사용자들이 인터넷을 통해 이 컴퓨터에 접속해 자료를 이용하는 시스템을 말한다.
 
-		=클라우드
+		클라우드
 
 13. 사진 촬영과 동시에 여러 가지 필터를 적용하여 페이스북이나 트위터 등에 사진을 공유할 수 있는 온라인 사진 공유 및 소셜 네트워크 서비스는 ( )이다.
 
-		=인스타그램
+		인스타그램
 
 14. ( )란 친구, 선후배, 동료 등 친분 관계가 있는 소셜 네트워크를 인터넷을 통하여 연결해 주는 서비스를 말하는데, 그냥 간단히 SNS라 부르기도 한다.
 
-		=소셜 네트워크 서비스
+		소셜 네트워크 서비스
 
 15. ( )는 학교, 회사, 동호회, 동창회 모임에서부터 가족, 커플, 친구들 모임까지 끈끈한 관계를 유지해나갈수 있는 모바일 소셜 네트워크 서비스이다.
 
-		=밴드
+		밴드
 
 16. 마크 주커버그가 설립한 전 세계 최대의 소셜 네트워크 중의 하나는 ( )이다.
 
-		=페이스북
+		페이스북
 
 17. 블록체인은 데이터 분산 처리 기술을 활용한 '공공 거래장부'또는 ( )로도 불리기도 한다.
 
-		=분산 거래 장부
+		분산 거래 장부
 
 18. 비트코인은 ( )의 작동방식 덕분에 이체 내역의 변조가 거의 불가능하므로 해킹 등으로부터 매우 안전한다.
 
-		=블록체인
+		블록체인
 
 19. NFT는 ( )기술을 이용해 누구의 통제도 받지 않으며 복제 불가능한 고유성을 가지고 있기 떄문에 ( )과 안전성이 있다.
 
-		=블록체인,희소성
+		블록체인
+		희소성
 
 20. NFT는 ( )이란 암호화폐를 통해 거래된다.
 
-		=이더리움
+		이더리움
 
 # 주관식 연습 문제
 
 1. BIS의 개념과 특징을 설명하시오.
 
-		=BIS는 버스 정류장 안내기 및 인터넷 등을 통하여 버스 이용 승객에게 운행 상황을 실시간으로 제공하기 위해 구착한 시스템입니다.
+		BIS는 버스 정류장 안내기 및 인터넷 등을 통하여 버스 이용 승객에게 운행 상황을 실시간으로 제공하기 위해 구착한 시스템입니다.
 
 		BIS는 지능형 교통시스템의 일부로서 개발이 활발히 추진되어 왔으며 현재 서울의 일부 버스정류장에서 실시되고 있습니다.
 
 2. M-커머스의 개념을 설명하고, 현재 자신이 사용하고 있는 M-커머스는 어떠한 것이 있는지 조사해 보시오.
 
-		=M-커머스는 휴대전화를 이용하여 상품을 구매하거나 금융거래를 하는 서비스를 통칭합니다.
+		M-커머스는 휴대전화를 이용하여 상품을 구매하거나 금융거래를 하는 서비스를 통칭합니다.
 
 		모바일 뱅킹 서비스, 기프티콘 등이 있습니다.
 
 3. U-헬스 서비스의 유형을 목적에 따라 2가지로 분류하고 해당 서비스들을 나열하라.
 
-		=공통 서비스:RFID를 응용한 의료기관 자산관리 시스템, 환자/대상자 정보 시스템.
+		공통 서비스:RFID를 응용한 의료기관 자산관리 시스템, 환자/대상자 정보 시스템.
 
 		예방과 건강증진:의료텔레메틱스, 건강정보 보험사 이용시스템, 건강관리 포털서비스, 온라인 휘트니스 서비스, 모바일 건강관리 서비스, 노약자 보호 서비스.
 
@@ -103,23 +105,23 @@
 
 4. U-City의 개념에 대해 설명하시오.
 
-		=U-City는 기존의 도시 형태에다 IT인프라와 유비쿼터스 서비스를 도시공간에 접목시켜 시간과 장소에 구애 받지 않고 다양한 서비스를 제공하며, 도시 내의 발생하는 모든 업무를 실시간으로 처리하여 주민들에게 보다 편리하고 풍요로운 생활을 제공하는 최첨단 미래형 도시라고 말할 수 있습니다.
+		U-City는 기존의 도시 형태에다 IT인프라와 유비쿼터스 서비스를 도시공간에 접목시켜 시간과 장소에 구애 받지 않고 다양한 서비스를 제공하며, 도시 내의 발생하는 모든 업무를 실시간으로 처리하여 주민들에게 보다 편리하고 풍요로운 생활을 제공하는 최첨단 미래형 도시라고 말할 수 있습니다.
 
 5. 스마트폰이 일반 휴대폰에 대해 가지고 있는 차별성을 말하시오.
 
-		=스마트폰은 자체 운영체제가 있고, 인터넷을 손쉽게 할 수 있으며, 다양한 어플리케이션을 다운로드 받아서 활용할 수 있습니다.
+		스마트폰은 자체 운영체제가 있고, 인터넷을 손쉽게 할 수 있으며, 다양한 어플리케이션을 다운로드 받아서 활용할 수 있습니다.
 
 6. 모바일 컴퓨팅과 휴대용 컴퓨팅의 차이점을 설명하시오.
 
-		=휴대용 컴퓨팅은 일반적으로 이동을 한 후 정해진 장소에서 사용하는 컴퓨터를 말하는데 비해, 모바일 컴퓨팅은 이동 중에도 컴퓨터를 사용할 수있다는 점에서 차이가 있습니다.
+		휴대용 컴퓨팅은 일반적으로 이동을 한 후 정해진 장소에서 사용하는 컴퓨터를 말하는데 비해, 모바일 컴퓨팅은 이동 중에도 컴퓨터를 사용할 수있다는 점에서 차이가 있습니다.
 
 7. 태블릿 PC가 활용되는 분야 4가지만 나열하시오.
 
-		=인터넷 검색, 앱의 활용, 멀티미디어 콘텐츠, U-헬스/U-City기기
+		인터넷 검색, 앱의 활용, 멀티미디어 콘텐츠, U-헬스/U-City기기
 
 8. 클라우딩 컴퓨팅의 장•단점에 대해 설명하시오.
 
-		=장점:1.클라우드를 활용함으로써 사용자 컴퓨터의 처리 기능과 저장 사양이 값쌉니다.
+		장점:1.클라우드를 활용함으로써 사용자 컴퓨터의 처리 기능과 저장 사양이 값쌉니다.
 
 		2.다양한 기기를 통한 일치된 사용자 환경이 가능합니다.
 
@@ -131,19 +133,19 @@
 		
 9. 우리의 일상생활과 밀접한 관계에 있는 앱의 종류들을 나열하고 각각 간단히 설명하시오.
 
-		=카카오톡:데이터를 이용하는 문자대화 서비스 어플리케이션입니다.
+		카카오톡:데이터를 이용하는 문자대화 서비스 어플리케이션입니다.
 
 		줌:줌 미팅은 비디오 커뮤니케이션이 개발한 사유 회상 통화 소프트웨어 프로그램입니다.
 
 10. 소셜 네트워크에 대해 설명하고, 그 종류를 나열하시오.
 
-		=소셜네트워크란 개인 또는 집단이 친분, 친족, 취미, 비즈니스, 종교, 전공, 학연 등 다양한 공통점으로 연결되어 만나는 상호의존적인 관계에 의해 형성되는 사회적 관계 구조를 말합니다.
+		소셜네트워크란 개인 또는 집단이 친분, 친족, 취미, 비즈니스, 종교, 전공, 학연 등 다양한 공통점으로 연결되어 만나는 상호의존적인 관계에 의해 형성되는 사회적 관계 구조를 말합니다.
 
 		종류로는 페이스북, 트위터, 인스타그램 등이 있습니다.
 
 11. 블록체인의 발전과 활용에 대해 설명하시오.
 
-		=블록체인의 개념은 1970년대 후반에 처음 형성되어 2008년 말에 등장하였으며 그 후 현대적인 개념으로 발전하였습니다.
+		블록체인의 개념은 1970년대 후반에 처음 형성되어 2008년 말에 등장하였으며 그 후 현대적인 개념으로 발전하였습니다.
 
 		블록체인은 비트코인등의 암호화폐에서 매우 중요한 역할을 하고 있으며 NFT발전에도 상당히 기여하고 있습니다.
 
@@ -151,4 +153,7 @@
 
 12. NFT거래 사례를 몇가지 제시하시오.
 
-		=바둑기보와 트위터 NFT, 디지털 아트 NFT,아바타 게임 NFT
+		바둑기보
+		트위터 NFT거래 
+		디지털 아트 NFT
+		아바타 게임 NFT
