--- a/NF1003_컴퓨터 개론/8. 가까이 다가오는 인공지능/연습 문제.md
+++ b/NF1003_컴퓨터 개론/8. 가까이 다가오는 인공지능/연습 문제.md
@@ -1,54 +1,69 @@
 # 단답식 연습 문제
 
-1. 인공지능이란 이름이 처음 탄생한 것은 (1956년 다트머스 회의) 회의 때이다
+1. 인공지능이란 이름이 처음 탄생한 것은 (   ) 회의 때이다
 
-2. 인공지능은 지금 개발되고 있는 (자율주행)를 통해 인간 대신에 운전을 해주는 등 일상적인 업무에서 편리함을 제공한다.
+		1956년 다트머스 회의
+1. 인공지능은 지금 개발되고 있는 (   )를 통해 인간 대신에 운전을 해주는 등 일상적인 업무에서 편리함을 제공한다.
 
-3. 신경망은 학습을 통한 문자의 인식, 음성의 인식, 영상이나 물체와 같은(패턴)의 인식등에 적합한 방법으로 여겨진다.
+		자율주행
+1. 신경망은 학습을 통한 문자의 인식, 음성의 인식, 영상이나 물체와 같은(   )의 인식등에 적합한 방법으로 여겨진다.
 
-4. 2016년 이세돌 9단과 (알파고)와의 세기적인 대국은 큰 관심을 불러일으켰으며, 이를 계기로 인공지능에 관한 관심이 급증하게 되었다.
+		패턴
+1. 2016년 이세돌 9단과 (   )와의 세기적인 대국은 큰 관심을 불러일으켰으며, 이를 계기로 인공지능에 관한 관심이 급증하게 되었다.
 
-5. 규칙기반 인공지능은 인간 두뇌의 (좌뇌) 작용과 유시하고, 신경망 기반 인공지능은 인간 두뇌의 (우뇌)작용에 대응한다
+		알파고
+1. 규칙기반 인공지능은 인간 두뇌의 (  ) 작용과 유시하고, 신경망 기반 인공지능은 인간 두뇌의 (   )작용에 대응한다
 
-6. 인공지능 시스템을 구성하는 4가지 핵심 요소는 모델 형태, 하드웨어와 소프트웨어, (학습과 실행용 프로그래밍 언어), 응용 분야이다
+		좌뇌
+		우뇌
+1. 인공지능 시스템을 구성하는 4가지 핵심 요소는 모델 형태, 하드웨어와 소프트웨어, (   ), 응용 분야이다
 
-7. 2011년 미국의 유명한 퀴즈쇼에서 역대 인간 우승자들과의 대결에서 승리를 차지한 컴퓨터 시스템은 (왓슨(Watson))이다
+		학습과 실행용 프로그래밍 언어
+1. 2011년 미국의 유명한 퀴즈쇼에서 역대 인간 우승자들과의 대결에서 승리를 차지한 컴퓨터 시스템은 (   )이다
 
-8. 애플의 인공지능 도우미는 (시리(Siri))이고, 구글의 인공지능 도우미는 (구글 어시스턴트(Google Assistant))이다
+		왓슨(Watson)
+1. 애플의 인공지능 도우미는 (시리(Siri))이고, 구글의 인공지능 도우미는 (구글 어시스턴트(Google Assistant))이다
 
-9. 인간 전문가를 대신할 수 있는 유능한 인공지능 시스템은 무엇인가?
+2. 인간 전문가를 대신할 수 있는 유능한 인공지능 시스템은 무엇인가?
 
 		 - 전문가 시스템(Expert System)
 
-10. 인공지능 영역 중 하나인 ( 음성인식)은 이미 스마트폰에 적용되어, 음성으로 명령하고 검색하여 그 결과를 즉시 알 수 있는 수준에 이르렸다
+3. 인공지능 영역 중 하나인 (   )은 이미 스마트폰에 적용되어, 음성으로 명령하고 검색하여 그 결과를 즉시 알 수 있는 수준에 이르렸다
 
-11. CCTV로 촬영된 영상으로부터 누구의 얼굴인지를 판단할 수 있는 (얼굴 인식)기술도 개발되었으며 그 수준이 점차 높아지고 있다
+		음성인식
+1. CCTV로 촬영된 영상으로부터 누구의 얼굴인지를 판단할 수 있는 (   )기술도 개발되었으며 그 수준이 점차 높아지고 있다
 
-12. 현재까지 인공지능에서 대부분의 연구 성과는 (약한 인공지능(Weak AI) ) 인공지능 수준에 해당한다
+		얼굴 인식
+1. 현재까지 인공지능에서 대부분의 연구 성과는 (   ) 인공지능 수준에 해당한다
 
-13. (파이토치(PyTorch))는 페이스북이 개발한 python 기반의 오픈소스 머신러닝 라이브러리다
 
-14. 1957년 로젠블럿이 개발하여 A, B, C 등 문자를 인식할 수 있었던 시스템은?
+		약한 인공지능(Weak AI)
+1. (   )는 페이스북이 개발한 python 기반의 오픈소스 머신러닝 라이브러리다
+
+
+		파이토치(PyTorch)
+		
+1. 1957년 로젠블럿이 개발하여 A, B, C 등 문자를 인식할 수 있었던 시스템은?
 
 		 - 마크 I 퍼셉트론(Mark I Perceptron)
 
-15. 1997년 IBM이 만든 인공지능 슈퍼컴퓨터인 “딥 블루”가 세게 챔피언에 등극한 게임은 무엇 인가?
+2. 1997년 IBM이 만든 인공지능 슈퍼컴퓨터인 “딥 블루”가 세게 챔피언에 등극한 게임은 무엇 인가?
 
 		 - 체스
 
-16. 삼성전자의 스마트폰에 탑제되어 음성이나 QR 코드 등을 인식할 수 있는 인공지능 가상 비서 프로그램은 무엇인가?
+3. 삼성전자의 스마트폰에 탑제되어 음성이나 QR 코드 등을 인식할 수 있는 인공지능 가상 비서 프로그램은 무엇인가?
 
 		 - 빅스비(Bixby)
 
-17. 인공지능에서 규칙을 이용하는 간단한 예 중 하나로서, 3 x 3 크기의 박스 안에서 인접한 숫자를 빈 곳으로 계속 움직여서 목표 상태로 만드는 서양식 게임은 무엇인가?
+4. 인공지능에서 규칙을 이용하는 간단한 예 중 하나로서, 3 x 3 크기의 박스 안에서 인접한 숫자를 빈 곳으로 계속 움직여서 목표 상태로 만드는 서양식 게임은 무엇인가?
 
 		 - 8-puzzle
 
-18. 신경망의 한 분야로서 여러 개의 은닉층을 가진 심층신경망을 기반으로 하는 신경망 계열의 학습 방법은 무엇인가?
+5. 신경망의 한 분야로서 여러 개의 은닉층을 가진 심층신경망을 기반으로 하는 신경망 계열의 학습 방법은 무엇인가?
 
 		 - 딥러닝
 
-19. 딥러닝을 지원하는 대표적인 소프트웨어 2개는 무엇인가?
+6. 딥러닝을 지원하는 대표적인 소프트웨어 2개는 무엇인가?
 
 		 - 텐서플로(TensorFlow)
 
