--- a/NF1003_컴퓨터 개론/9. 멀티미디어의 세계와 전자상거래/연습 문제.md
+++ b/NF1003_컴퓨터 개론/9. 멀티미디어의 세계와 전자상거래/연습 문제.md
@@ -1,44 +1,61 @@
 # 단답식 연습 문제
 
-1. 알파벳은 한 문자당 1바이트가 소요되는데 비해,한글은 한 문자당(2)바이트가 소요된다.
+1. 알파벳은 한 문자당 1바이트가 소요되는데 비해,한글은 한 문자당( )바이트가 소요된다.
 
-2. (어도비 포토샵(Adobe Photoshop))은2차원 이미지 도구로서 현재의PC수준에서 매우 강력한 기능을 가진 디지털 영상 처리 소프트웨어이다.
+		2
+1. (   )은2차원 이미지 도구로서 현재의PC수준에서 매우 강력한 기능을 가진 디지털 영상 처리 소프트웨어이다.
 
-3. (VOD(Video On Demand))란 전송선을 이용하여 디지털 데이터 형태로 저장된 각종 영화,게임,쇼핑 등 다양한 영상 소프트웨어를 소비자가 선택하여 원하는 시간에 수신하여 감상할 수 있는 쌍방향 멀티미디어 응용을 말한다.
+		어도비 포토샵(Adobe Photoshop)
+1. (   )란 전송선을 이용하여 디지털 데이터 형태로 저장된 각종 영화,게임,쇼핑 등 다양한 영상 소프트웨어를 소비자가 선택하여 원하는 시간에 수신하여 감상할 수 있는 쌍방향 멀티미디어 응용을 말한다.
 
-4. 정보 콘텐츠 중에서 디지털화하여 컴퓨터 등 정보기기용으로 생산,유통,소비되는 정보 콘텐츠 및 정보통신망이나 방송망을 통해 송수신되는 정보 콘텐츠를 통칭하여(멀티미디어 콘텐츠)라고 한다.
+		VOD(Video On Demand)
+1. 정보 콘텐츠 중에서 디지털화하여 컴퓨터 등 정보기기용으로 생산,유통,소비되는 정보 콘텐츠 및 정보통신망이나 방송망을 통해 송수신되는 정보 콘텐츠를 통칭하여(   )라고 한다.
 
-5. (MIDI(Musical Instrument Digital Interface))란 음악을 표현하기 위해 전자 악기와 컴퓨터 간에 정보를 전송하기 위한 프로토콜이다.
+		멀티미디어 콘텐츠
+1. (   )란 음악을 표현하기 위해 전자 악기와 컴퓨터 간에 정보를 전송하기 위한 프로토콜이다.
 
-6. (리듬액션 게임)게임은 플레이어가 리듬이나 음악에 맞춰서 조작하는 게임을 총칭하는데,사운드 시뮬레이션 게임이라고도 한다.
+		MIDI(Musical Instrument Digital Interface)
+1. (   )게임은 플레이어가 리듬이나 음악에 맞춰서 조작하는 게임을 총칭하는데,사운드 시뮬레이션 게임이라고도 한다.
 
-7. 유무선 인터넷을 통해 멀리 떨어져 있는 의사와 환자 간의 영상을 통한 영상진료를(원격 영상진료)서비스라고 한다.
+		리듬액션
+1. 유무선 인터넷을 통해 멀리 떨어져 있는 의사와 환자 간의 영상을 통한 영상진료를(   )서비스라고 한다.
 
-8. (키오스크(Kiosk))란 공공장소에 설치된 정보 검색 및 처리 단말기를 말하며 정보의 공유성과 형평성을 보완할 수 있는 각종 서비스가 가능하다.
+		원격 영상진료 
+1. (   )란 공공장소에 설치된 정보 검색 및 처리 단말기를 말하며 정보의 공유성과 형평성을 보완할 수 있는 각종 서비스가 가능하다.
 
-9. (하이퍼텍스트)란 텍스트를 앞에서부터 차례로 보는 방식이 아니라 필요에 따라 텍스트의 페이지를 자유자재로 넘나들며 텍스트를 열람할 수 있는 방식이다.
+		키오스크(Kiosk)
+1. (   )란 텍스트를 앞에서부터 차례로 보는 방식이 아니라 필요에 따라 텍스트의 페이지를 자유자재로 넘나들며 텍스트를 열람할 수 있는 방식이다.
 
-10. 웹 브라우저로 즐기는 게임을 브라우저 게임 또는(웹 게임)이라 한다.
+		하이퍼텍스트 
+1. 웹 브라우저로 즐기는 게임을 브라우저 게임 또는()이라 한다.
 
-11. (모바일 게임)은'숲속의 앨리스'나'앵그리버드'와 같이 스마트폰과 같은 모바일 기기를 통해 즐길 수 있는 게임을 두루 이르는 말이다.
+		웹 게임
+1. (   )은'숲속의 앨리스'나'앵그리버드'와 같이 스마트폰과 같은 모바일 기기를 통해 즐길 수 있는 게임을 두루 이르는 말이다.
 
-12. 최근K팝 걸그룹 블랙핑크(Blackpink)의 경우(메타버스)플랫품을 이용하여 팬과의 소통에 활용하고 있다.
+		모바일 게임
+1. 최근K팝 걸그룹 블랙핑크(Blackpink)의 경우 (   )플랫품을 이용하여 팬과의 소통에 활용하고 있다.
 
-13. 게임 요소가 가미된 교육용 콘텐츠를(게이미피케이션)라고 한다.
+		메타버스
+1. 게임 요소가 가미된 교육용 콘텐츠를 (   )라고 한다.
 
-14. 전자상거래 중 고객이 은행 점포를 직접 방문하지 않고 인터넷을 이용하여 금융 거래를 할 수 있는 거래를(인터넷 뱅킹)이라 한다.
 
-15. 전자상거래에서 공급체인 관리를SCM이라 하며,전사적 자원 관리 시스템을(ERP)라고 한다.
+		게이미피케이션
+1. 전자상거래 중 고객이 은행 점포를 직접 방문하지 않고 인터넷을 이용하여 금융 거래를 할 수 있는 거래를(   )이라 한다.
 
-16. 전자상거래에서 기업과 정부 간의 거래를 약칭으로B2G라고 하며,기업과 기업 간의 거래는(B2B)라고 한다.
+		인터넷 뱅킹 
+1. 전자상거래에서 공급체인 관리를SCM이라 하며,전사적 자원 관리 시스템을(   )라고 한다.
 
-17. 상당히 큰 양의 영상 데이터를 축소하는 작업을 무엇이라 하는가?
+			ERP
+1. 전자상거래에서 기업과 정부 간의 거래를 약칭으로B2G라고 하며,기업과 기업 간의 거래는(   )라고 한다.
 
-	- 영상 압축
+			B2B
+1. 상당히 큰 양의 영상 데이터를 축소하는 작업을 무엇이라 하는가?
 
-18. 정보통신 기술을 활용하여 제조와 물류,유통 업체의 상품 흐름을 한눈에 파악할 수 있도록 하는 유통 총공급망 관리를 의미하는 영어 약자는 무엇인가?
+		- 영상 압축
 
-	 - SCM
+2. 정보통신 기술을 활용하여 제조와 물류,유통 업체의 상품 흐름을 한눈에 파악할 수 있도록 하는 유통 총공급망 관리를 의미하는 영어 약자는 무엇인가?
+
+		 - SCM
 
 # 주관식 연습 문제
 
