시험: 기독교 개론 기말고사 대비

--- a/AA1072_기독교 개론/기말 고사 일정.md
+++ b/AA1072_기독교 개론/기말 고사 일정.md
@@ -12,3 +12,5 @@
 구약성서 이야기 8장 예언서, 신약성서 이야기 1장 복음서, 3장 예수의 가르침, 4장 하나님의 나라,
 
 5장 예수 그리스도의 십자가, 6장 부활, 8장 바울과 바울 서신, 9장 구원과 바울의 신학, 성서를 읽는 목적
+
+![](자유와%20구원의%20텍스트%20성서_윤덕규_동연.pdf)
