--- a/AE0049_C 프로그래밍 입문/과제.md
+++ b/AE0049_C 프로그래밍 입문/과제.md
@@ -392,3 +392,33 @@ graph TD
 
 ```
 믄자열 현출일 
+
+```mermaid
+flowchart TD
+
+A[Start] --> B{row &lt; 3}
+
+B -- 아니오 --> K[End]
+
+B -- 예 --> C1[변수 j를 1로 초기화]
+
+C1 --> C{j &lt;= 9}
+
+C -- 아니오 --> J[row 증가]
+
+J --> B
+
+C -- 예 --> D1[변수 i를 3 * #40;row + 1#41;로 초기화]
+
+D1 --> D{i &gt; 3 * row}
+
+D -- 아니오 --> F[j 증가]
+
+F --> C
+
+D -- 예 --> G[printf#40;&quot;%d * %d = %2d\t&quot;, i, j, i * j#41;]
+
+G --> H[i 감소]
+
+H --> D
+```
