계속 올리는 걸 잊었더니 올릴게 너무 많음
어쩔 수 없이 한번에 뭉탱이로 올림

--- a/NA2015_인공지능 개론/1. 인공지능 개요/인공지능과 데이터.md
+++ b/NA2015_인공지능 개론/1. 인공지능 개요/인공지능과 데이터.md
@@ -12,26 +12,26 @@
 # 빅데이터 활용 사례
 
 ## 서울시 심야 버스
-• 자정부터 새벽 5시 사이에 이루어진 30억 개의 KT휴대폰 통화 데이터와 스마트 카드를 이용한 택시 승하차 데이터 500만 건을 분석
-• 심야 시간 통화량이 많은 지점과 승하차 지점을 파악하여 심야 버스의 노선과 정류장, 배차 간격을 설정
-• 심야 시간 시민들의 안전한 귀가와 교통비 절감, 대중교통 이용률을 높임
+ - 자정부터 새벽 5시 사이에 이루어진 30억 개의 KT휴대폰 통화 데이터와 스마트 카드를 이용한 택시 승하차 데이터 500만 건을 분석
+ - 심야 시간 통화량이 많은 지점과 승하차 지점을 파악하여 심야 버스의 노선과 정류장, 배차 간격을 설정
+ - 심야 시간 시민들의 안전한 귀가와 교통비 절감, 대중교통 이용률을 높임
 ## 조류 독감 확산 경로 파악
-• 조류 독감이 발병한 농가 데이터를 지도에 표시
-• 주요 발병 지점이 철새 서식지 근처가 아니라 고속도로 근처임을 발견
-• 사료 운반, 방역을 위해 농가를 방문한 차량을 추적한 결과 조류 독감 확산 매개체가 철새가 아닌 축산 농가임을 발견
+ - 조류 독감이 발병한 농가 데이터를 지도에 표시
+ - 주요 발병 지점이 철새 서식지 근처가 아니라 고속도로 근처임을 발견
+ - 사료 운반, 방역을 위해 농가를 방문한 차량을 추적한 결과 조류 독감 확산 매개체가 철새가 아닌 축산 농가임을 발견
 ## 신용카드사의 데이터 활용
-• 비자(VISA)카드의 경우 고객의 신용카드 사용 이력을 통해 고객의 구매 성향을 파악하여 근처 가맹점의 할인 쿠폰 발송 →  카드 이용 건수와 신규 가맹점 증가
-• 고객의 카드 이용 패턴을 분석하여 카드 부정 사용을 차단하는 시스템 운영
-• 고객의 카드 사용 데이터를 바탕으로 고객을 그룹화하여 각 그룹별로 최적화시킨 카드 상품 출시
+ - 비자(VISA)카드의 경우 고객의 신용카드 사용 이력을 통해 고객의 구매 성향을 파악하여 근처 가맹점의 할인 쿠폰 발송 →  카드 이용 건수와 신규 가맹점 증가
+ - 고객의 카드 이용 패턴을 분석하여 카드 부정 사용을 차단하는 시스템 운영
+ - 고객의 카드 사용 데이터를 바탕으로 고객을 그룹화하여 각 그룹별로 최적화시킨 카드 상품 출시
 ## 패션회사 ‘자라’의 빅데이터 활용
-• 소셜 미디어에서 수집한 데이터와 매장에서 많이 팔린 제품 정보를 신제품 디자인에 활용
-• MIT 연구팀과 함께 빅데이터를 활용하여 최적의 재고 관리 시스템을 개발하여 효율적인 재고 관리 실현
+ - 소셜 미디어에서 수집한 데이터와 매장에서 많이 팔린 제품 정보를 신제품 디자인에 활용
+ - MIT 연구팀과 함께 빅데이터를 활용하여 최적의 재고 관리 시스템을 개발하여 효율적인 재고 관리 실현
 ## 국민건강보험공단의 국민 건강 알람 서비스
-• http://forecast.nhis.or.kr/
-• 진료정보, 기상·환경 정보, 소셜 미디어에서 수집한 데이터를 바탕으로 주요 질병 발생 위험도를 알림
-• 유행성 질환, 만성 질환, 영유아 질환으로 구분하여 자주 걸리는 질환에 대한 발생 위험도를 지역별로 표시
-• 질병 위험도에 따라 주의 사항과 사전 예방 캠페인 진행
-• 지역별 기상정보, 대기 정보, 진료 동향과 소셜 미디어 정보 확인 가능
+ - http://forecast.nhis.or.kr/
+ - 진료정보, 기상·환경 정보, 소셜 미디어에서 수집한 데이터를 바탕으로 주요 질병 발생 위험도를 알림
+ - 유행성 질환, 만성 질환, 영유아 질환으로 구분하여 자주 걸리는 질환에 대한 발생 위험도를 지역별로 표시
+ - 질병 위험도에 따라 주의 사항과 사전 예방 캠페인 진행
+ - 지역별 기상정보, 대기 정보, 진료 동향과 소셜 미디어 정보 확인 가능
 
 # 잘못된 데이터의 남용
 
@@ -42,14 +42,14 @@
 ▪ 편향된 결과로 인해 불공정한 사례가 발생하거나 사회적 문제를 초래할 수 있음
 ## 데이터 편향 사례
 ### 아마존의 이력서 평가
-• 과거 10년 간 지원자의 이력서와 내부 자료를 바탕으로 구직자의 이력서를 평가하는 인공지능 시스템 개발
-• 이력서에 ‘여학교’ 등의 여성과 관련된 단어가 있는 지원자에 대해 부정적으로 평가
-• 과거 지원자의 IT 직종에 여성 지원자가 소수 → 인공지능이 여성이라는 요소를 감점 요인으로 학습
+ - 과거 10년 간 지원자의 이력서와 내부 자료를 바탕으로 구직자의 이력서를 평가하는 인공지능 시스템 개발
+ - 이력서에 ‘여학교’ 등의 여성과 관련된 단어가 있는 지원자에 대해 부정적으로 평가
+ - 과거 지원자의 IT 직종에 여성 지원자가 소수 → 인공지능이 여성이라는 요소를 감점 요인으로 학습
 ### 영국 경찰의 인공지능 범죄 예측 프로그램 HART
-• HART는 용의자의 재범률을 높음, 보통, 낮음으로 구분하여 구금 여부를 판단하고 범죄가 발생할 시기와 장소를 예측
-• 소수 민족 용의자가 백인 용의자보다 두 배 이상 재범률이 높고, 가난한 사람들이 범죄를 저지를 확률이 더 높다는 편향을 보임
+ - HART는 용의자의 재범률을 높음, 보통, 낮음으로 구분하여 구금 여부를 판단하고 범죄가 발생할 시기와 장소를 예측
+ - 소수 민족 용의자가 백인 용의자보다 두 배 이상 재범률이 높고, 가난한 사람들이 범죄를 저지를 확률이 더 높다는 편향을 보임
 ### 데이터 편향 사례
 ▪ 자동차 충돌 실험
-• 2019년 버지니아 대학교 연구팀이 1998년부터 2015년 사이에 발생한 자동차 정면 충돌 사고 2만여 건을 분석한 결과 남성보다 여성의 중상 확률이 높은 것을 발견
-• 자동차 개발 과정에서 실시한 자동차 충돌 실험에서 성인 남성 평균 체형을 기준으로 만든 더미만 사용
-• 남성 탑승자에 대한 사고 충격 데이터를 수집하여 자동차 안전 장치 개발에 반영 → 자동차 사고 시 여성이 더 큰 피해를 입음
+ - 2019년 버지니아 대학교 연구팀이 1998년부터 2015년 사이에 발생한 자동차 정면 충돌 사고 2만여 건을 분석한 결과 남성보다 여성의 중상 확률이 높은 것을 발견
+ - 자동차 개발 과정에서 실시한 자동차 충돌 실험에서 성인 남성 평균 체형을 기준으로 만든 더미만 사용
+ - 남성 탑승자에 대한 사고 충격 데이터를 수집하여 자동차 안전 장치 개발에 반영 → 자동차 사고 시 여성이 더 큰 피해를 입음
