--- a/NF1003_컴퓨터 개론/11. IT 융합 기술 응용과 모바일 컴퓨팅/연습 문제.md
+++ b/NF1003_컴퓨터 개론/11. IT 융합 기술 응용과 모바일 컴퓨팅/연습 문제.md
@@ -119,7 +119,7 @@
 
 		인터넷 검색, 앱의 활용, 멀티미디어 콘텐츠, U-헬스/U-City기기
 
-8. 클라우딩 컴퓨팅의 장•단점에 대해 설명하시오.
+8. 클라우딩 컴퓨팅의 장 -단점에 대해 설명하시오.
 
 		장점:1.클라우드를 활용함으로써 사용자 컴퓨터의 처리 기능과 저장 사양이 값쌉니다.
 
